--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,7 @@ jobs:
           plugin_languages: yes
           plugin_pagespeed: yes
           plugin_pagespeed_screenshot: yes
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
           plugin_tweets: yes
           plugin_tweets_limit: 2
+          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
