--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,7 @@ jobs:
           plugin_tweets: yes
           plugin_tweets_limit: 2
           plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
+          plugin_topics: yes
+          plugin_topics_mode: mastered
+          plugin_topics_limit: 0
+
