--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   # Schedule updates
-  schedule: [{cron: "0 */12 * * *"}]
+  schedule: [{cron: "0 0 */7 * *"}]
   push: {branches: "main"}
 jobs:
   github-metrics:
